Cleaning the example